--- a/dash/frontend/static/index.html
+++ b/dash/frontend/static/index.html
@@ -31,7 +31,7 @@ page       Page number. Use the resulting <b>last_page</b> value
            to provide pagination through items.
            Default: 0
            Note: ?page=2 will jump to the third page!
-per-page   Number of items to be returned per API call.
+per_page   Number of items to be returned per API call.
            Default: 10</pre>
 <pre style="font-size: 10px">
 <span style="font-weight: bold;">Endpoints with <span class="label label-important">Granular</span> accept the following:</span>
