--- a/dash/frontend/static/index.html
+++ b/dash/frontend/static/index.html
@@ -90,13 +90,13 @@ page       Step backwards through time.
                     /api/1/activity/github
                 </a></div>
                 <div class="accordion-body collapse" id="row2"><div class="accordion-inner">
-<p class="description">Stream of events occurring on OKFN's Github repositories. Each event contains a standard <b><u>person</u></b> object and a standard <b><u>repo</b></u> object.</p>
+<p class="description">Stream of events occurring on tracked Github repositories. Each event contains a standard <b><u>person</u></b> object and a standard <b><u>repo</b></u> object.</p>
 <div class="example"><a href="/api/1/activity/github" title="All activity on OKFN-owned repositories">/api/1/activity/github</a></div>
-<div class="example"><a href="/api/1/activity/github?repo=annotator,recline" title="All activity on the Annotator and Recline repositories">/api/1/activity/github?repo=annotator,recline</a></div>
+<div class="example"><a href="/api/1/activity/github?repo=okfn/annotator,okfn/recline" title="All activity on the Annotator and Recline repositories">/api/1/activity/github?repo=okfn/annotator,okfn/recline</a></div>
                         <pre style="font-size: 10px;">
 <b>Optional Parameters</b>
 repo    Comma seperated names of repositories.
-        eg: ckanext-harvest,ckanext-dgu</pre>
+        eg: okfn/ckanext-harvest,okfn/ckanext-dgu</pre>
                 </div></div>
             </div>
             <div class="accordion-group">
@@ -198,13 +198,13 @@ opinion   Filter by opinion label in database.
                 <div class="accordion-heading"><a href="#row13" class="accordion-toggle" data-toggle="collapse">
                 <span class="label label-info pull-right">Paginated</span>
                 <span class="label label-important pull-right">Granular</span>
-                /api/1/history/github/<span class="url-opt">&lt;repo_name&gt;</span>
+                /api/1/history/github/<span class="url-opt">&lt;repo_owner&gt;</span>/<span class="url-opt">&lt;repo_name&gt;</span>
             </a></div>
                 <div class="accordion-body collapse" id="row13"><div class="accordion-inner">
                     <p class="description">Browse complete history of a GitHub repository's statistics (its <u>watchers</u>, <u>forks</u>, <u>issues</u> and <u>size</u>).</p>
-                    <div class="example"><a href="/api/1/history/github/ckan" title="Last 10 days of CKAN snapshots">/api/1/history/github/ckan</a></div>
-                    <div class="example"><a href="/api/1/history/github/ckan?grain=week" title="Last 10 weeks of CKAN snapshots">/api/1/history/github/ckan?grain=week</a></div>
-                    <div class="example"><a href="/api/1/history/github/ckan?grain=month&per_page=12" title="Last 12 months of CKAN snapshots">/api/1/history/github/ckan?grain=month&per_page=12</a></div>
+                    <div class="example"><a href="/api/1/history/github/okfn/ckan" title="Last 10 days of CKAN snapshots">/api/1/history/github/okfn/ckan</a></div>
+                    <div class="example"><a href="/api/1/history/github/okfn/ckan?grain=week" title="Last 10 weeks of CKAN snapshots">/api/1/history/github/okfn/ckan?grain=week</a></div>
+                    <div class="example"><a href="/api/1/history/github/okfn/ckan?grain=month&per_page=12" title="Last 12 months of CKAN snapshots">/api/1/history/github/okfn/ckan?grain=month&per_page=12</a></div>
                 </div></div>
             </div>
             <div class="accordion-group">
