--- a/dash/frontend/static/index.html
+++ b/dash/frontend/static/index.html
@@ -4,7 +4,7 @@
     <title>OKFN: Activity API</title>
     <link rel="stylesheet" type="text/css" href="static/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="static/style.css" />
-    <script src="http://code.jquery.com/jquery-1.8.1.min.js"></script>
+    <script src="static/jquery-1.7.2.js"></script>
     <script src="static/bootstrap.min.js"></script>
     <script>
      $(function() {
@@ -179,12 +179,19 @@ login     Comma-seperated list of logins to target
         <div class="accordion">
             <div class="accordion-group">
                 <div class="accordion-heading"><a href="#row12" class="accordion-toggle" data-toggle="collapse">
+                <span class="label label-info pull-right">Paginated</span>
                 <span class="label label-important pull-right">Granular</span>
                 /api/1/history/github
                 </a></div>
                 <div class="accordion-body collapse" id="row12"><div class="accordion-inner">
-                    <p class="description">Snapshot of historical stats for all Github repos. For more detailed history use the <u><b>/api/1/history/github/<i>repo_name</i></b></u> endpoint for granular, paginated browsing of a single repository's statistics.</p>
-                    <div class="example"><a href="/api/1/history/github" title="All-repo history">/api/1/history/github</a></div>
+                    <p class="description">Snapshot of historical stats for Github repos. Returns <u><b>watchers</b></u>,<u><b>forks</b></u>,<u><b>size</b></u>, and <u><b>issues</b></u> metrics.</p>
+                    <div class="example"><a href="/api/1/history/github" title="Last 10 days of statistics for all repositories.">/api/1/history/github</a></div>
+                    <div class="example"><a href="/api/1/history/github?repo=okfn/ckan&grain=week" title="CKAN history for the last ten weeks">/api/1/history/github?repo=okfn/ckan&grain=week</a></div>
+                    <div class="example"><a href="/api/1/history/github?repo=okfn/annotator,okfn/recline&grain=month&per_page=1&page=3" title="Annotator and Recline snapshot from three months ago">/api/1/history/github?repo=okfn/annotator,okfn/recline&grain=month&per_page=1&page=3</a></div>
+                <pre style="font-size: 10px;">
+<b>Optional Parameters</b>
+repo    Comma seperated names of Github repositories.
+        eg: okfn/ckan,okfn/ckanext-dgu</pre>
                 </div></div>
             </div>
             <div class="accordion-group">
@@ -202,19 +209,6 @@ login     Comma-seperated list of logins to target
 <b>Optional Parameters</b>
 list    Comma seperated names of mailman lists.
         eg: ckan-dev,ckan-discuss</pre>
-                </div></div>
-            </div>
-            <div class="accordion-group">
-                <div class="accordion-heading"><a href="#row13" class="accordion-toggle" data-toggle="collapse">
-                <span class="label label-info pull-right">Paginated</span>
-                <span class="label label-important pull-right">Granular</span>
-                /api/1/history/github/<span class="url-opt">&lt;repo_owner&gt;</span>/<span class="url-opt">&lt;repo_name&gt;</span>
-            </a></div>
-                <div class="accordion-body collapse" id="row13"><div class="accordion-inner">
-                    <p class="description">Browse complete history of a GitHub repository's statistics (its <u>watchers</u>, <u>forks</u>, <u>issues</u> and <u>size</u>).</p>
-                    <div class="example"><a href="/api/1/history/github/okfn/ckan" title="Last 10 days of CKAN snapshots">/api/1/history/github/okfn/ckan</a></div>
-                    <div class="example"><a href="/api/1/history/github/okfn/ckan?grain=week" title="Last 10 weeks of CKAN snapshots">/api/1/history/github/okfn/ckan?grain=week</a></div>
-                    <div class="example"><a href="/api/1/history/github/okfn/ckan?grain=month&per_page=12" title="Last 12 months of CKAN snapshots">/api/1/history/github/okfn/ckan?grain=month&per_page=12</a></div>
                 </div></div>
             </div>
             <div class="accordion-group">
