Now scraping twitter account statistics for OKFN owned accounts. Daily & 10min interval

--- a/dash/frontend/static/index.html
+++ b/dash/frontend/static/index.html
@@ -117,11 +117,11 @@ list    Comma seperated names of mailman lists.
             <div class="accordion-group">
                 <div class="accordion-heading"><a href="#row4" class="accordion-toggle" data-toggle="collapse">
                 <span class="label label-info pull-right">Paginated</span>
-                /api/1/activity/twitter
+                /api/1/activity/twitter/tweet
                 </a></div>
                 <div class="accordion-body collapse" id="row4"><div class="accordion-inner">
 <p class="description">Stream of tweets created by members of the OKFN's user database (where they have filled out the <u>twitter</u> field on <a href="http://okfn.org">okfn.org</a>). Each tweet event contains a standard <b><u>person</u></b> object.</p>
-<div class="example"><a href="/api/1/activity/twitter" title="All twitter activity from OKFN members">/api/1/activity/twitter</a></div>
+<div class="example"><a href="/api/1/activity/twitter/tweet" title="All tweets from OKFN members">/api/1/activity/twitter/tweet</a></div>
                 </div></div>
             </div>
         </div>
@@ -162,6 +162,15 @@ opinion   Filter by opinion label in database.
           eg. 'staff'
 login     Comma-seperated list of logins to target
           eg. 'rgrp,zephod'</pre>
+                </div></div>
+            </div>
+            <div class="accordion-group">
+                <div class="accordion-heading"><a href="#row8a" class="accordion-toggle" data-toggle="collapse">
+                /api/1/data/twitter/account
+                </a></div>
+                <div class="accordion-body collapse" id="row8a"><div class="accordion-inner">
+                    <p class="description">List the OKFN Twitter accounts we are tracking, as well as their current total <b><u>tweets</u></b>, <b><u>followers</u></b>, <b><u>following</u></b>, and their <b><u>description</u></b> and canonical <b><u>name</u></b></p>
+                    <div class="example"><a href="/api/1/data/twitter/account" title="List of OKFN Twitter accounts">/api/1/data/twitter/account</a></div>
                 </div></div>
             </div>
             <div class="accordion-group">
@@ -227,12 +236,27 @@ list    Comma seperated names of mailman lists.
             <div class="accordion-group">
                 <div class="accordion-heading"><a href="#row16" class="accordion-toggle" data-toggle="collapse">
                 <span class="label label-info pull-right">Paginated</span>
-                /api/1/history/twitter
+                /api/1/history/twitter/tweet
                 </a></div>
                 <div class="accordion-body collapse" id="row16"><div class="accordion-inner">
                     <p class="description">Browse the history of Twitter statistical analysis. This counts the number of <b><u>tweets_today</u></b>, and lists the 20 most active <b><u>authors</u></b>, and the 20 most frequently mentioned <b><u>links</u></b>, <b><u>hashtags</u></b> and <b><u>words</u></b>.</p>
-                    <div class="example"><a href="/api/1/history/twitter" title="Last 10 days of analysis">/api/1/history/twitter</a></div>
-                    <div class="example"><a href="/api/1/history/twitter?page=1&per_page=30" title="Analysis from one month ago (approx)">/api/1/history/twitter?page=1&per_page=30</a></div>
+                    <div class="example"><a href="/api/1/history/twitter/tweet" title="Last 10 days of analysis">/api/1/history/twitter/tweet</a></div>
+                    <div class="example"><a href="/api/1/history/twitter/tweet?page=1&per_page=30" title="Analysis from one month ago (approx)">/api/1/history/twitter/tweet?page=1&per_page=30</a></div>
+                </div></div>
+            </div>
+            <div class="accordion-group">
+                <div class="accordion-heading"><a href="#row16a" class="accordion-toggle" data-toggle="collapse">
+                <span class="label label-info pull-right">Paginated</span>
+                /api/1/history/twitter/account
+                </a></div>
+                <div class="accordion-body collapse" id="row16a"><div class="accordion-inner">
+                    <p class="description">Browse the history of an OKFN Twitter account. Snapshots the total <b><u>followers</u></b>, <b><u>following</u></b>, and <b><u>tweets</u></b> of each account.</p>
+                    <div class="example"><a href="/api/1/history/twitter/account?name=okfn" title="Last 10 days of stats for @okfn">/api/1/history/twitter/account?name=okfn</a></div>
+                    <div class="example"><a href="/api/1/history/twitter/account?name=ckanproject&page=1&per_page=30" title="@ckanproject stats from last month">/api/1/history/twitter/account?name=ckanproject&page=1&per_page=30</a></div>
+                    <pre style="font-size: 10px;">
+<b>REQUIRED Parameters</b>
+name    Account name to view the history of.
+        eg: ckanproject</pre>
                 </div></div>
             </div>
         </div>
